# test-CodeRabbit

./: README.md  pyproject.toml
.github/workflows/: ai-pr-reviewer.yml
app/execute_query/: README.md  create_library.sh  pyproject.toml
app/execute_query/src/: main.py  requirements.txt
app/execute_query/src/sql/: get_date.sql
app/execute_query/tests/: test_main.py
